<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmClockSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

  <string name="tv_selectedAlarm_title">設定アラーム音</string>
  <string name="tv_selectedTime_title">設定時間は・・・</string>
  <string name="tv_zero">00：00</string>
  <string name="tv_noselected">music name♪</string>
  <string name="tv_stop_message">STOPボタンを選択</string>
  <string name="tv_ok_message">正解！</string>
  <string name="tv_ng_message">間違い！</string>
  <string name="btn_time">時間設定</string>
  <string name="btn_alarm">アラーム音</string>
  <string name="btn_off">START</string>
  <string name="btn_on">STOP</string>
  <string name="btn_stop">STOP</string>
  <string name="select_time">時間を選択して下さい</string>

</resources>