<?xml version="1.0" encoding="utf-8"?>
<!-- リニアレイアウト(縦並び) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android1="http://schemas.android.com/apk/res/android">

    <!-- 設定時間表示用テキスト -->

    <TextView
        android:id="@+id/tv_selectedTime"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#FF847C"
        android:gravity="center"
        android:text="@string/tv_zero"
        android:textSize="80sp"
        android1:textColor="#fff"/>

    <!-- 設定アラーム音表示用タイトル -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:text="@string/tv_selectedAlarm_title"
        android:textColor="@color/grey_white"
        android:textSize="15sp" />

    <!-- 設定アラーム音表示用テキスト -->

  <TextView
    android:id="@+id/tv_selectedAlarm"
    android:text="@string/tv_noselected"
    android:textSize="25sp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginBottom="5dp" />


  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
      <!-- 時間設定ボタン -->
    <Button
         android:id="@+id/btn_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_time"
        android:layout_weight="1"
        android1:layout_gravity="bottom">
    </Button>
    <!-- アラーム音設定ボタン -->
    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_alarm"
        android:layout_weight="1"
        android1:layout_gravity="bottom">
    </Button>
       <!-- アラームON/OFFボタン -->
    <Button
        android:id="@+id/btn_onoff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_off"
        android:drawableBottom="@android:drawable/button_onoff_indicator_off"
        android:layout_weight="1"
        android1:layout_gravity="bottom">
    </Button>
</LinearLayout>

</LinearLayout>
